test/parser/valid/_custom/singleline_comment_without_eol.java
// This is a test where the last comment does not end with a /n, but instead an EOF. Maybe we should also consider a carriage return.
//
// Buy why