test/parser/bad/_custom/non_ending_multiline_comment.java
/**
  This is an error because the comment does not end.
